[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/boomerang.png" type="Texture" id=1]
[ext_resource path="res://Weapons/Boomerang.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 11.3853

[node name="Boomerang" type="Area2D"]
position = Vector2( 11.2778, 24.5727 )
scale = Vector2( 0.75, 0.75 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="BounceBackTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.672, -1.972 )
scale = Vector2( 1.404, 1.305 )
shape = SubResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_Boomerang_area_entered"]
[connection signal="area_shape_entered" from="." to="." method="_on_Boomerang_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_Boomerang_body_entered"]
[connection signal="timeout" from="BounceBackTimer" to="." method="_on_BounceBackTimer_timeout"]
